--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
           <div class="card-body">
             <div class="h5">AISSCE</div>
             <p class="category">D.A.V. Public School,KolyaNagar</p>
-            <p>Secured .81.5%.</p>
+            <p>Secured 81.5%.</p>
           </div>
         </div>
       </div>
@@ -336,7 +336,7 @@
           <div class="card-body">
             <div class="h5">CBSE</div>
             <p class="category">D.A.V. Public School,KolyaNagar</p>
-            <p>CGPA 10</p>
+            <p>Secured CGPA 10</p>
           </div>
         </div>
       </div>
